--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zoble/form-entity",
+    "name": "zoble/zoble-form-entity",
     "description": "Generate HTML output form from an Entity",
     "authors": [
         {
