--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
     "name": "zoble/zoble-form-entity",
     "description": "Generate HTML output form from an Entity",
+    "license": "MIT",
+    "keywords": [
+        "form",
+        "entity",
+        "doctrine",
+        "orm",
+        "module",
+        "zf2"
+    ],
     "authors": [
         {
             "name": "Reginaldo Azevedo Junior",
@@ -14,6 +23,11 @@
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "2.*",
-        "doctrine/doctrine-orm-module": "0.*"           
+        "doctrine/doctrine-orm-module": "0.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "ZobleFormEntity\\": "src/"
+        }
     }
 }
